# ms_services

./: .gitignore  README.md
blog_service/: README.md  main.py  pyproject.toml
blog_service/application/ports/: unit_of_work.py
blog_service/application/ports/repositories/: comment_repository.py  post_repository.py
blog_service/application/ports/use_cases/: post_use_cases.py
blog_service/application/use_cases/comment/: create_comment.py  delete_comment.py  get_post_comments.py
blog_service/application/use_cases/post/: change_post_status.py  create_post.py  create_post_with_comments.py  delete_post.py  get_post.py  list_posts.py  update_post.py
blog_service/core/: app_factory.py  config.py  db_factory.py  dependencies.py  exceptions.py
blog_service/domain/entities/: comment.py  post.py
blog_service/domain/value_objects/: post_status.py
blog_service/infrastructure/mongodb/: session.py  unit_of_work.py
blog_service/infrastructure/mongodb/models/: comment.py  post.py
blog_service/infrastructure/mongodb/repositories/: comment_repository.py  post_repository.py
blog_service/infrastructure/sqlite3/: session.py  unit_of_work.py
blog_service/infrastructure/sqlite3/models/: comment.py  post.py
blog_service/infrastructure/sqlite3/repositories/: comment_repository.py  post_repository.py
blog_service/presentation/api/v1/: comment_router.py  post_router.py
blog_service/presentation/sanic/middleware/: error_handler.py
blog_service/presentation/schemas/: comment.py  post_schema.py
blog_service/tests/: conftest.py
(+9 files in other folders)
